# lang

./: .flake8  LICENSE  README.md  ast_defs.py  astprinter.py  callable_obj.py  clock.py  environment.py  expressions.py  function.py  gen_ast.py  gen_ast_exprs.py  interpreter.py  lang.py  main.py  parse.py  pyproject.toml  resolver.py  runtime_err.py  scanner.py  source.lang  source.txt  tokens.py
asts/: ast_defs.py  gen_ast.py
c/: .clang-format  .clang-tidy  .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  README.md  a.lox
c/source/: bytecode.c  bytecode.h  common.h  compile.c  compile.h  debug.c  debug.h  lib.c  lib.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
c/test/: CMakeLists.txt
c/test/source/: lang_test.c
classes/: classdef.py
error/: return_val.py  runtime_err.py
examples/: clock.lang  closures.lang
function/: callable_obj.py  function.py
lib/: clock.py  globals.py
parsing/: parse.py  scanner.py
python/: README.md  main.py  pyproject.toml
python/asts/: gen_ast.py
python/classes/: classdef.py  instance.py
python/examples/: class.lang  closures.lang  inheritance.lang
python/function/: function.py
python/lib/: __init__.py  clock.py  globals.py  native_func.py
python/parsing/: parse.py
python/runtime/: interpreter.py
python/scope/: environment.py
runtime/: clock.py  interpreter.py
scope/: environment.py  resolver.py
